<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadNotesActivity"
    android:background="@drawable/ctr_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_fragment_home"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Managecollege">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseingToolbar_fragment_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:title="Upload notes"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:background="@drawable/ctr_bg">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_fragment_home"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/action_bar_menu"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@drawable/round_left_corner_70">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_left_corner_70">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_title_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/corner_radius_15"
                android:hint="Notes Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_upload_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_branches_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/branches_list"
                android:prompt="@string/choose_branch"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorFullNotesPrimary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_title_upload_notes"
                />

            <Spinner
                android:id="@+id/spinner_subjects_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/subjects_list"
                android:prompt="@string/choose_subject"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorFullNotesPrimary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_branches_upload_notes"
                />

            <Spinner
                android:id="@+id/spinner_chapters_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/chapters_list"
                android:prompt="@string/choose_chapter"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorFullNotesPrimary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_subjects_upload_notes"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_notes_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="Write notes here  or copy source code from below text editor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_chapters_upload_notes"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes_upload_notes"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

<!--            <jp.wasabeef.richeditor.RichEditor-->
<!--                android:id="@+id/rich_editor_upload_notes"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="300dp"-->
<!--                android:padding="20dp"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:layout_marginRight="20dp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/text_input_layout_notes_upload_notes"-->
<!--                />-->

            <ProgressBar
                android:id="@+id/upload_progressbar_upload_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_notes_upload_notes"/>

            <Button
                android:id="@+id/submit_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:gravity="center"
                android:background="@drawable/corner_radius_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_progressbar_upload_notes"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textview_link_of_ckeditor_online_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:autoLink="web"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_upload_notes"/>

            <WebView
                android:id="@+id/web_view_activity_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_link_of_ckeditor_online_upload_notes"
                />

            <Button
                android:id="@+id/button_open_in_web_view_upload_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Open in webview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/web_view_activity_upload_notes"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/button_open_in_web_browser_upload_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Open in web browser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_open_in_web_view_upload_notes"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/bottomFix_upload_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_open_in_web_browser_upload_notes"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>